<resources>
    <string name="app_name">iNotify</string>
    <string name="close_button">Close Button</string>
    <string name="please_enter_your_details">Please enter your details</string>
    <string name="name">Name</string>
    <string name="age">AGE</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="occupation">Occupation</string>
    <string name="email">Email</string>
    <string name="phone">Phone</string>
    <string name="save_user_details">Save User Details</string>
    <string name="title_activity_main3">Main3Activity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>


    <string name="open">open</string>
    <string name="close">close</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="description">Description</string>
</resources>
